# claude-cookbooks

.github/workflows/: notebook-quality.yml
claude_agent_sdk/: .gitignore  00_The_one_liner_research_agent.ipynb  01_The_chief_of_staff_agent.ipynb  02_The_observability_agent.ipynb  03_The_learning_path_test_notebook.ipynb  pyproject.toml
claude_agent_sdk/.claude/: README.md  settings.json
claude_agent_sdk/.github/: copilot-instructions.md
claude_agent_sdk/.github/workflows/: claude.yml
claude_agent_sdk/04_Python_Implementation_Mission/: README.md
claude_agent_sdk/chief_of_staff_agent/: agent.py
claude_agent_sdk/chief_of_staff_agent/scripts/: decision_matrix.py
claude_agent_sdk/docs/: ADDITIONS.md  CODEBASE_OVERVIEW.md  README.md  TROUBLESHOOTING.md
claude_agent_sdk/observability_agent/: agent.py
claude_agent_sdk/research_agent/: agent.py
claude_agent_sdk/utils/: agent_visualizer.py  html_renderer.py
