[project]
name = "cc-sdk-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.0.20",
    "ipykernel>=6.29.5",
    "mcp-server-git>=2025.1.14",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.6",
]
